--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <%- include("./pages/" + page); %>
+    <%- include("../pages/" + page); %>
   </body>
 </html>
